--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         let numero2=prompt("Ingrese el segundo numero: ");
         let operacion=prompt("Ingrese la operacion (sumar, restar, miltiplicar, dividir)");
 
-        let resultado=calculadora(numero1,numero2,operacion);
+        let resultado=Calculadora(numero1,numero2,operacion);
 
         console.log("El resultado es: "+ resultado);
         document.write("El resultado es: "+ resultado);
