--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                     return "Operación no Valida....";
             }
         }
-        let numero1=prompt("Ingrese el primer numero: ");
-        let numero2=prompt("Ingrese el segundo numero: ");
+        let numero1=parseFloat(prompt("Ingrese el primer numero: "));
+        let numero2=parseFloat(prompt("Ingrese el segundo numero: "));
         let operacion=prompt("Ingrese la operacion (sumar, restar, miltiplicar, dividir)");
 
         let resultado=Calculadora(numero1,numero2,operacion);
