--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         }
         let numero1=parseFloat(prompt("Ingrese el primer numero: "));
         let numero2=parseFloat(prompt("Ingrese el segundo numero: "));
-        let operacion=prompt("Ingrese la operacion (sumar, restar, miltiplicar, dividir)");
+        let operacion=prompt("Ingrese la operacion (sumar, restar, multiplicar, dividir)");
 
         let resultado=Calculadora(numero1,numero2,operacion);
 
