--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Laboratorio 13</title>
 </head>
 <body>
+    <img src="Imagen1.jpg">
     <script>
-
-        //funciones matematicas 
         function sumar (a,b){
             return a + b;
         }
@@ -45,9 +44,8 @@
         let resultado=Calculadora(numero1,numero2,operacion);
 
         console.log("El resultado es: "+ resultado);
-        document.write("El resultado es: "+ resultado);
-
+        document.white("El resultado es: "+ resultado);
+      
     </script>
-    
 </body>
 </html>
