--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         let resultado=Calculadora(numero1,numero2,operacion);
 
         console.log("El resultado es: "+ resultado);
-        document.white("El resultado es: "+ resultado);
+        document.write("El resultado es: "+ resultado);
       
     </script>
     
