--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laboratorio 13</title>
+    <link rel="stylesheet" type="text/css" href="Estilos.css">
 </head>
 <body>
-    <img src="Imagen1.jpg">
     <script>
         function sumar (a,b){
             return a + b;
