--- a/index2.html
+++ b/index2.html
@@ -14,25 +14,27 @@
         <button class="numero" onclick= "agregrarNumero('7')">7</button>
         <button class="numero" onclick= "agregrarNumero('8')">8</button>
         <button class="numero" onclick= "agregrarNumero('9')">9</button>
-        <button class="operador" onclick= "agregrarNumero('*')">X</button>
+        <button class="operador" onclick= "agregrarOperador('*')">X</button>
 
         <button class="numero" onclick= "agregrarNumero('4')">4</button>
         <button class="numero" onclick= "agregrarNumero('5')">5</button>
         <button class="numero" onclick= "agregrarNumero('6')">6</button>
-        <button class="operador" onclick= "agregrarNumero('-')">-</button>
+        <button class="operador" onclick= "agregrarOperador('-')">-</button>
 
         <button class="numero" onclick= "agregrarNumero('1')">7</button>
         <button class="numero" onclick= "agregrarNumero('2')">7</button>
         <button class="numero" onclick= "agregrarNumero('3')">7</button>
-        <button class="operador" onclick= "agregrarNumero('+')">+</button>
+        <button class="operador" onclick= "agregrarOperador('+')">+</button>
 
         <button class="numero" onclick= "agregrarNumero('0')">0</button>
-        <button class="limpiar" onclick= "agregrarNumero('C')">C</button>
-        <button class="igual" onclick= "agregrarNumero('=')">=</button>
-        <button class="operador" onclick= "agregrarNumero('/')">/</button>
+        <button class="limpiar" onclick= "limpiarPantalla('C')">C</button>
+        <button class="igual" onclick= "calcularResultado('=')">=</button>
+        <button class="operador" onclick= "agregrarOperadoro('/')">/</button>
     </div>
         
    </div>
+
+   <script src="Calculadora.js"></script>
 
     
 </body>
