--- a/index2.html
+++ b/index2.html
@@ -11,25 +11,25 @@
         <input tipe="text" id="pantalla" disabled>
     
    <div class = "botones" >
-        <button class="numero" onclick= "agregrarNumero('7')">7</button>
-        <button class="numero" onclick= "agregrarNumero('8')">8</button>
-        <button class="numero" onclick= "agregrarNumero('9')">9</button>
-        <button class="operador" onclick= "agregrarOperador('*')">X</button>
+        <button class="numero" onclick= "agregarNumero('7')">7</button>
+        <button class="numero" onclick= "agregarNumero('8')">8</button>
+        <button class="numero" onclick= "agregarNumero('9')">9</button>
+        <button class="operador" onclick= "agregarOperador('*')">X</button>
 
-        <button class="numero" onclick= "agregrarNumero('4')">4</button>
-        <button class="numero" onclick= "agregrarNumero('5')">5</button>
-        <button class="numero" onclick= "agregrarNumero('6')">6</button>
+        <button class="numero" onclick= "agregarNumero('4')">4</button>
+        <button class="numero" onclick= "agregarNumero('5')">5</button>
+        <button class="numero" onclick= "agregarNumero('6')">6</button>
         <button class="operador" onclick= "agregrarOperador('-')">-</button>
 
-        <button class="numero" onclick= "agregrarNumero('1')">7</button>
-        <button class="numero" onclick= "agregrarNumero('2')">7</button>
-        <button class="numero" onclick= "agregrarNumero('3')">7</button>
-        <button class="operador" onclick= "agregrarOperador('+')">+</button>
+        <button class="numero" onclick= "agregarNumero('1')">7</button>
+        <button class="numero" onclick= "agregarNumero('2')">7</button>
+        <button class="numero" onclick= "agregarNumero('3')">7</button>
+        <button class="operador" onclick= "agregarOperador('+')">+</button>
 
-        <button class="numero" onclick= "agregrarNumero('0')">0</button>
+        <button class="numero" onclick= "agregarNumero('0')">0</button>
         <button class="limpiar" onclick= "limpiarPantalla('C')">C</button>
         <button class="igual" onclick= "calcularResultado('=')">=</button>
-        <button class="operador" onclick= "agregrarOperadoro('/')">/</button>
+        <button class="operador" onclick= "agregarOperador('/')">/</button>
     </div>
         
    </div>
