--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
         <button class="numero" onclick= "agregarNumero('4')">4</button>
         <button class="numero" onclick= "agregarNumero('5')">5</button>
         <button class="numero" onclick= "agregarNumero('6')">6</button>
-        <button class="operador" onclick= "agregrarOperador('-')">-</button>
+        <button class="operador" onclick= "agregarOperador('-')">-</button>
 
         <button class="numero" onclick= "agregarNumero('1')">7</button>
         <button class="numero" onclick= "agregarNumero('2')">7</button>
